--- a/Android/app/src/main/res/layout/sys_results_activity.xml
+++ b/Android/app/src/main/res/layout/sys_results_activity.xml
@@ -55,6 +55,7 @@
                     android:id="@+id/best_option_data"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:paddingLeft="@dimen/activity_horizontal_margin"
                     android:textColor="@color/black"
                     android:background="@drawable/std_border"/>
 
